# renode

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .renode-root  ACKNOWLEDGEMENTS  ACKNOWLEDGEMENTS.rst  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  DEBUGGING_IN_VSCODE.md  Directory.Build.targets  LICENSE  README.md  README.rst  Renode-Windows.sln  Renode.sln  Renode_NET.sln  array_memory.robot  build.sh  configure  example.xml  main.py  miv.resc  miv_array_mem.repl  miv_mixed_overlapping_mem.repl  omnisharp.json  renode  renode-test  renode-test.bat  requirements.txt  run.sh  test.sh  test_backend.py  test_bridge.py  tmptests.yml  verify_all_phases.py  verify_phase5.py  walkthrough.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  main.yml  problem-matcher.json
backend/: async_bridge.py  renode_wrapper.py
docs/: AST2600_RENODE_TESTING.md  platform_description_format.rst  time_framework.rst
extras/: AdcFeeder.cs
fastvdma-binaries/: fastvdma-zedboard.dtb
scripts/: efr32mg  hackaton  monitor.py  openbmc-boot.resc  uboot-full.resc  versatile
scripts/ast2600/: test-scu.resc
scripts/complex/: efr32xg24-twonode_demo.resc
scripts/multi-node/: da16200.resc  imxrt500_nrf52840_pigweed_bt_advertiser.resc  nrf52840-ble-hci-uart-zephyr.resc  nrf52840-ble-zephyr.resc  ramn.resc  sam_e70.resc  uart_hub_nucleo_h753.resc  uart_passthrough_nucleo_h753.resc
scripts/pydev/: counter.py  fast-ticker.py  flipflop.py  ipi_mailbox.py  nuvoton_npcx9_bootrom.py  rcc-stm32.py  repeater.py  rolling-bit.py  ticker.py  tzc400_gatekeeper.py
scripts/single-node/: 8cpu.dtb  acrn_x86_64-zephyr.resc  acrn_x86_64_zephyr.resc  ambiq-apollo4.resc  andes_ae350_zephyr.resc  andes_et171_zephyr.resc  arduino_uno_r4_minima.resc  arty_litex_vexriscv.resc  arty_sifive_e21.resc  arvsom.resc  atsamd20_xpro.resc  beaglev-fire.resc  beaglev_starlight.resc  cc2538.resc  ck-ra6m5.resc  cortex-a53-linux.resc  cortex-a53.resc  cortex-a78-linux.resc  cortex-r52-hirtos.resc  cortex-r52-xen-zephyr.resc  cortex-r52.resc  efr32mg.resc  egis_et171_zephyr.resc  ek-ra2e1.resc  ek-ra8m1.resc  focaltech_ft9001_zephyr.resc  fsl_lx2160ardb_uboot.resc  gd32vf103v_eval.resc  gr712rc.resc  gr716_zephyr.resc  hifive_unleashed.resc  hifive_unmatched-tbm.resc  hifive_unmatched.resc  hifive_unmatched_sdcard.resc  i386-kvm-bios.resc  i386-kvm-linux.resc  i386.resc  i386_64-kvm-bios.resc  i386_64-kvm-linux.resc  i386_zephyr.resc  (+94 more)
src/: Directory.Build.targets
src/Plugins/SystemCPlugin/SystemCModule/: CMakeLists.txt
src/Plugins/SystemCPlugin/SystemCModule/include/: renode_bridge.h  renode_bridge_native.h
src/Plugins/SystemCPlugin/SystemCModule/lib/: socket-cpp
src/Plugins/SystemCPlugin/SystemCModule/src/: renode_bridge.cpp  renode_bridge_native.cpp
src/Plugins/SystemCPlugin/SystemCNativeModule/: CMakeLists.txt
src/Plugins/SystemCPlugin/SystemCNativeModule/include/: renode_bridge_native.h
src/Plugins/SystemCPlugin/SystemCNativeModule/src/: renode_bridge_native.cpp
src/Renode/: EFR32xG24_Radio.cs  Options.cs  Program.cs  Renode.csproj  Renode_NET.csproj
src/Renode/Network/ExternalControl/client/lib/: CMakeLists.txt  renode_api.c
tests/: aarch64-host-tests.yaml  example.robot  helper.py  known-unstable.yaml  monitoring.py  net_library.py  nunit_results_merger.py  nunit_tests_provider.py  renode-keywords.robot  requirements.txt  retry_and_timeout_listener.py  robot_output_formatter.py  robot_output_formatter_verbose.py  robot_tests_provider.py  run_tests.py  segmenting.py  stats.yaml  test.bat  tests.txt  tests.yaml  tests_engine.py  unstable_tests.py
tests/complex/: ValentyUSB_EPTRI.robot  foboot2.repl
tests/external-control/: external-control.robot
tests/metrics-analyzer/: metrics-analyzer.robot
tests/native-interface/: native-interface.robot  ni_library.py
tests/network-logging/: network-logging.robot  (+1 more)
tools/: RegistersMonitor.cs  add-wpf-dep.py  common.sh  dts2repl-version.sh  fetch_libraries.sh  formatter.sh  peripherals_scanner.py  requirements.txt  tcg_trace_parser.sh
tools/NativeInterface/example/: .clang-format  CMakeLists.txt  main.c
tools/PeakRDL-renode/: .gitignore  README.md  pyproject.toml
tools/PeakRDL-renode/src/peakrdl_renode/: __peakrdl__.py  cs_exporter.py  memory.py  scanner.py  util.py
tools/PeakRDL-renode/src/peakrdl_renode/csharp/: ast.py  helper.py  op_null.py  op_order.py  operators.py  process.py
tools/PeakRDL-renode/tests/: .gitignore  SystemRDLGenTest.cs  SystemRDLMem1PeripheralTest.cs  SystemRDLPeripheralsTests.csproj  SystemRDLPeripheralsTests_NET.csproj  generate_cs.py  prepare_memory_tests.sh  systemrdl.json
tools/PeakRDL-renode/tests/rdl/: mem1.rdl  test1.rdl  test2.rdl  test3.rdl  test4.rdl
tools/PeakRDL-repl/: .gitignore  README.md  pyproject.toml
tools/PeakRDL-repl/src/peakrdl_repl/: __peakrdl__.py  repl.py  repl_exporter.py
tools/PeakRDL-repl/tests/: peakrdl-repl.robot
tools/PeakRDL-repl/tests/rdl/: platform0.rdl
tools/PeakRDL-repl/tests/reference/: platform0.repl
tools/PeakRDL-repl/tests/renode/: EmptyPeripheral.cs  platform0_parent.repl
tools/execution_tracer/: coverview_integration.py  dwarf.py  execution_tracer_keywords.py  execution_tracer_reader.py  pyproject.toml  requirements.txt
tools/execution_tracer/execution_tracer/: common_utils.py  coverage.py  coverview_integration.py  dwarf.py  execution_tracer_reader.py  pc2line.py
tools/external_control_client/: CMakeLists.txt  Doxyfile  README.md
tools/external_control_client/examples/adc/: main.c
tools/external_control_client/examples/gpio/: main.c
tools/external_control_client/examples/run_for/: CMakeLists.txt  main.c
tools/external_control_client/examples/sysbus/: main.c
tools/external_control_client/include/: renode_api.h
tools/external_control_client/lib/: CMakeLists.txt  renode_api.c
ui/: USER_GUIDE.md  implementation_roadmap.md  main_window.py  memory_watch.py  ui_planning.md
wip-bins/: arty_e21_cxx_hello.elf
(+1146 files in other folders)
